fix weird bars in main website section + officially adopt dark mode

--- a/Public/css/page-layout.css
+++ b/Public/css/page-layout.css
@@ -53,5 +53,5 @@ nav {
 
 main {
   padding: 15px;
-  overflow: scroll;
+  overflow: auto;
 }
